--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/jetstream": "^2.8",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.5"
+        "livewire/livewire": "^2.5",
+        "mercadopago/dx-php": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
